# oxideauth-api

./: .dockerignore  .env.prod  .gitignore  Cargo.toml  Dockerfile  Dockerfile.dev  Dockerfile.prod  Makefile  README.md  docker-compose.yaml
.sqlx/: query-107cd34a12a5787a4fad8a42297791b76769d39f3683039308f8160c5fb807bd.json  query-14f4fc700be185686c6890deb47bab4ba90f562112636a44010e0da224b5eea4.json  query-1b0fc02cda82a70f14fcbb0b03672563ca835528aa9ab7d5f1b4df196ad84125.json  query-1ceec0e9ee29ed1ce614d855d1ba854c3ee4dea6bcb0562a152d5ce86e2ef242.json  query-213f33995da0302b82a08ea672b6b3a702a11a6cd05e39534a5bf0c6fa0459f8.json  query-234d6053ad2765687ccee4db480b4c32fc4ad4e7320836af674da3f26c38c6b4.json  query-23c09795835af7e9992e7e5f4341080214721f539df02170391e73c797d255e0.json  query-2796ca993f8dcb8cff5bf07570c747d6d21b66f26b166e72ea717eb7ca81e932.json  query-2a23fcf9f0a9d7887410f1acd302d847e768c7c8779655c39fa03e8e29d2618a.json  query-35f050542921b24772c18c2c5f983a9f29571711a9c862612910cacf325cfa89.json  query-37e51b90e768527961b94c714b3ab9adf7163ad2c78075c27c1d22347952471f.json  query-3aba3344c46d14c34a490c3d82bdafbe5209f755fa9d8daf32078741034d7671.json  query-44e149ae80b9d60ef043841723f5f80c526bd09602d4475b50e04e15482f5d5e.json  query-545bdad47522ef15e022ccc1c1218bc96f0bc9badd3392029734266863b917b4.json  query-54b0dd13e3317a16c4e43f64e5517ffd9492cce523876bc2c044478201b3f246.json  query-62259a0f8fbc9c35c8b9e517d6d0cd09a935c87f860fb90d61a6599d26fcf971.json  query-6de9ccd7b90c82e3ea2881fc935c775019e5908c213533869f2fb339f3d9942e.json  query-7c906ce30a83e49aedd2c0e61cae0215e0b67a1eb719e0f93508a579b45e6863.json  query-7e816a9df9992b48181f426687510875236c216d9698f6f47ae62aeba64bb275.json  query-8b4c1186f7f9ff9a62c2269946c6a53a1f7047a301a0fbc06ec2a068ade3a3be.json  query-8db3c11b8556c268e07de655a8abbd517b8926d90b20e2b7e176551d03dd6b8f.json  query-8eca3e5eac97c21df5af3a1bdb412452e6321faf8530c32ef5ef1eb3146ade77.json  (+15 more)
data/: best.txt
migrations/: 20240704073846_init.sql
(+58 files in other folders)
