[package]
name = "oxideauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = "1.0.203"
serde_json = "1.0.119"
sqlx = { version = "0.7.4", features = ["postgres","sqlite","uuid", "runtime-tokio", "tls-native-tls"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.2"
uuid = { version = "1.3.3", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ] }
rand = "0.7"
rust-argon2 = "0.5"
env_logger = "0.10.0"
log = "0.4.18"

[dev-dependencies]
cargo-watch = "7.8"

[[bin]]
name = "oxideauth"
path = "src/cli.rs"

[[bin]]
name = "oxideauth-server"
path = "src/main.rs"