[package]
name = "oxideauth"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.8.0"
dotenv = "0.15.0"
jsonwebtoken = "9.3.0"
serde = "1.0.203"
serde_json = "1.0.119"
sqlx = { version = "0.8.0", features = ["postgres","sqlite","uuid", "runtime-tokio", "tls-native-tls", "macros"] }
clap = { version = "4.0", features = ["derive"] }
ctrlc = "3.2"
uuid = { version = "1.3.3", features = [ "v4", "fast-rng", "macro-diagnostics", "serde" ] }
rand = "0.7"
rust-argon2 = "0.5"
env_logger = "0.10.0"
log = "0.4.18"
actix-cors = "0.7.0"
reqwest = {version="0.12.5", features=["json"]}
chrono = {version="0.4.38", features = ["serde"]}
lettre = "0.11.7"
lettre_email = "0.9.4"
tera = "1.20.0"
aws-sdk-ses = {version="1.36.0", features = ["behavior-version-latest"]}
aws-sdk-s3 = {version="1.42.0",features = ["behavior-version-latest"]}
async-trait = "0.1.81"
actix-http = "3.9.0"

[dev-dependencies]
cargo-watch = "7.8"
actix-rt = "2.5"
serial_test = "0.6"

[lints.rust]
unused = "allow"
unsafe_code = "forbid"

